--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="9hNd61ub3AYLwDcoUyhDn4TKqdt7Noj6F0NuI2k4r4Q" />
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Морские прогулки FastMarine</title>
   </head>
   <body>
     <div id="app"></div>
